0.4.0 - currently working on
- [#1459] Change: The testing framework should throw exceptions on errors instead of failing silently.
- [#1440] Feature: Add functions in the testing framework to create dummy content elements
- [#1419] Feature: Add functions in the testing framework to create dummy FE pages and dummy system folders
- [#1418] Change: testingframework::resetAutoIncrement and ::countRecords should allow every existing table
- [#1328] Feature: Add the "is_dummy_record" field to the fe_users, pages  and tt_content tables
- [#1378] Change: Remove the enableGlobalFunctions setting from the EM and use static methods instead
- [#1382] Feature: Testing framework: add sorting to created relations
- [#1400] Fix: Correct a few typos
- [#795] Fix: Unclosed markers wreck everything
- [#1399] Fix: testingframework::createRecords must check that the UID is not set
- [#1395] Fix: Increase the delta in the timer unit tests
- [#1383] Fix: Performance issue with the cleanUp() method in the testing framework
- [#1385] Fix: Permanently hiding subparts is broken
- [#1357] Fix: Unit test fails: testStatisticsForDefaultBucket
- [#1381] Change: Change the way the CSS file is included
- [#1132] Fix: Retrieving a hidden subpart should return an empty string
- [#796] Fix: setSubpart is broken
- [#1140] Fix: The prefix option for markers and subparts is broken
- [#1139] Fix: Hiding more than one subpart at a time fails
- [#1345] Feature: Provide access to the templating functions in BE mode
- [#1349] Fix: Fixed handling of m:n tables regarding reset auto-increment index in the testing framework
- [#1026] Feature: Add a function "checkIfPositiveIntegerOrZero" to the configcheck
- [#1046] Feature: Add a function "checkIfIntegerInRange" to the configcheck
- [#1334] Fix: Typo in the subpart names in the unit tests
- [#1237] Feature: Added a testing framework that creates dummy records for unit tests